--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Salo</string>
+    <string name="app_name">Авто базар</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="phone">Телефон</string>
+    <string name="password">Пароль</string>
+    <string name="login">Вхід</string>
+    <string name="goto_register">До реєстрації</string>
 </resources>
